--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 25 14:45:42 MDT 2023
-sdk.dir=/home/lutellie/Android/Sdk
+#Mon Nov 06 22:58:24 MST 2023
+sdk.dir=C\:\\Users\\thibo\\AppData\\Local\\Android\\Sdk
